# musl

./: CMakeLists.txt
fakes/bits/: alltypes.h  errno.h  float.h
